--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <a href="#" class="info-btn continue-btn">Continue</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
