--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+   
 </head>
 
 <body>
@@ -21,15 +20,45 @@
                 <a href="#">My Github</a>
             </nav>
         </header>
-        <section class="home">
-            <div class="home-content">
-                <h1>Quiz Website</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quibusdam odio? Voluptatum amet harum
-                    maxime quis? Voluptas possimus, veritatis aliquam praesentium eum illo dolor iure doloremque dicta
-                    quam cumque id.</p>
-                <button class="start-btn">Start</button>
-            </div>
-        </section>
+        <div class="container">
+            <section class="quiz-section">
+                <div class="Quiz-box">
+                    <h1>Coding Quiz</h1>
+                    <div class="quiz-header">
+                        <span>Quiz website tutorial</span>
+                        <div class="header-score">Score: 0/5</div>
+                    </div>
+                    <div class="question-text">What does HTML Stand for?</div>
+                    <div class="option-list">
+                        <div class="option">
+                            <span>A. Hyper Text markup language</span>
+                        </div>
+                        <div class="option">
+                            <span>B. Hy Text markup language</span>
+                        </div>
+                        <div class="option">
+                            <span>C. Hyper Text marker language</span>
+                        </div>
+                        <div class="option">
+                            <span>D. Hyper Text markup lang</span>
+                        </div>
+                    </div>
+                    <div class="quiz-footer">
+                        <span class="question-total">1 out of 5 Questions</span>
+                        <button class="next-btn">Next</button>
+                    </div>
+                </div>
+            </section>
+            <section class="home">
+                <div class="home-content">
+                    <h1>Quiz Website</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quibusdam odio? Voluptatum amet harum
+                        maxime quis? Voluptas possimus, veritatis aliquam praesentium eum illo dolor iure doloremque dicta
+                        quam cumque id.</p>
+                    <button class="start-btn">Start</button>
+                </div>
+            </section>
+        </div>
     </main>
     <div class="popup-info">
         <h2>Quiz Guide</h2>
