connected to question.js

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     <h1>Coding Quiz</h1>
                     <div class="quiz-header">
                         <span>Quiz website tutorial</span>
-                        <div class="header-score">Score: 0/5</div>
+                        <span class="header-score">Score: 0/5</span>
                     </div>
-                    <div class="question-text">What does HTML Stand for?</div>
+                    <h2 class="question-text"> HTML fullform?</h2>
                     <div class="option-list">
-                        <div class="option">
+                        <!-- <div class="option">
                             <span>A. Hyper Text markup language</span>
                         </div>
                         <div class="option">
@@ -41,7 +41,7 @@
                         </div>
                         <div class="option">
                             <span>D. Hyper Text markup lang</span>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="quiz-footer">
                         <span class="question-total">1 out of 5 Questions</span>
@@ -73,6 +73,7 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <script src="question.js"></script>
 </body>
 
 </html>
